improve: better error handling for server data providers (#333)